--- a/src/angular/status/status.scss
+++ b/src/angular/status/status.scss
@@ -31,8 +31,8 @@
 }
 
 .sbb-status-message {
-  background-color: var(--sbb-color-milk);
-  color: var(--sbb-color-granite);
+  background-color: var(--sbb-status-message-background-color);
+  color: var(--sbb-status-message-color);
   line-height: calc(#{sbb.pxToRem(20)} * var(--sbb-scaling-factor));
   font-family: var(--sbb-font-roman);
   margin-left: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor));
