--- a/src/angular/styles/_variables.scss
+++ b/src/angular/styles/_variables.scss
@@ -99,3 +99,6 @@ $sbbColorCallToAction: $sbbColorRed;
 $sbbColorCallToActionHover: $sbbColorRed125;
 $sbbColorError: $sbbColorRed;
 $sbbColorText: $sbbColorBlack;
+
+// Dark mode colors
+$sbbColorRedDarkMode: #ff3838;
