--- a/src/showcase/app/app.component.html
+++ b/src/showcase/app/app.component.html
@@ -20,13 +20,16 @@
   </sbb-app-chooser-section>
   <a routerLink="/">Introduction</a>
   <a routerLink="/howtoupdate">How to update</a>
-  <sbb-radio-group
+  <sbb-select
     [formControl]="sbbVariant"
-    class="additional-header-content sbb-radio-group-horizontal"
+    class="additional-header-content"
+    placeholder="Design variant"
   >
-    <sbb-radio-button value="standard">Standard</sbb-radio-button>
-    <sbb-radio-button value="lean">Lean</sbb-radio-button>
-  </sbb-radio-group>
+    <sbb-option [value]="'standard'">Standard</sbb-option>
+    <sbb-option [value]="'lean'">Lean</sbb-option>
+    <sbb-option [value]="'light'">Lean (light mode)</sbb-option>
+    <sbb-option [value]="'dark'">Lean (dark mode)</sbb-option>
+  </sbb-select>
 </sbb-header-lean>
 
 <sbb-icon-sidebar-container>
