--- a/src/angular/datepicker/calendar/calendar.scss
+++ b/src/angular/datepicker/calendar/calendar.scss
@@ -19,7 +19,7 @@
   max-width: 100%;
   width: var(--sbb-datepicker-calendar-width);
   height: var(--sbb-datepicker-calendar-height);
-  background-color: var(--sbb-color-background);
+  background-color: var(--sbb-datepicker-calendar-background-color);
   border: var(--sbb-border-width) solid var(--sbb-color-weak-accent);
   border-radius: var(--sbb-border-radius);
 }
