--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -320,6 +320,7 @@
   --sbb-header-lean-height: calc(#{sbb.pxToRem(54)} * var(--sbb-scaling-factor));
   --sbb-header-lean-base-z-index: 1000;
   --sbb-header-lean-side-menu-z-index: 800;
+  --sbb-header-lean-background-color: var(--sbb-color-background);
   --sbb-header-lean-menu-mobile-z-index: 1100;
   --sbb-header-lean-menu-tablet-z-index: 700;
   --sbb-header-lean-menu-width: calc(#{sbb.pxToRem(300)} * var(--sbb-scaling-factor));
@@ -903,6 +904,7 @@
       // Header
       --sbb-header-lean-subtitle-color: var(--sbb-color-graphite);
       --sbb-header-lean-border-bottom-color: var(--sbb-color-graphite);
+      --sbb-header-lean-background-color: var(--sbb-color-black);
 
       // Menu
       --sbb-menu-item-label: var(--sbb-color-milk);
