--- a/src/angular/sidebar/sidebar/sidebar.scss
+++ b/src/angular/sidebar/sidebar/sidebar.scss
@@ -251,6 +251,6 @@
 }
 
 .sbb-sidebar-mobile-menu-bar-close-wrapper {
-  background-color: var(--sbb-color-background);
+  background-color: var(--sbb-sidebar-background-color);
   z-index: 1;
 }
