--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -2259,7 +2259,7 @@ textarea {
   }
 
   .sbb-selection-disabled & {
-    color: var(--sbb-selection-container-icon-color-disabled);
+    background-color: var(--sbb-selection-container-icon-color-disabled);
   }
 
   .sbb-selection-checked & {
