--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -899,10 +899,10 @@
       --sbb-dialog-container-background-color: var(--sbb-color-charcoal);
 
       // Expansion Panel
-      --sbb-expansion-panel-background-color-open: var(--sbb-color-midnight);
-      --sbb-expansion-panel-background-color-closed: var(--sbb-color-midnight);
+      --sbb-expansion-panel-background-color-open: var(--sbb-color-charcoal);
+      --sbb-expansion-panel-background-color-closed: var(--sbb-color-charcoal);
       --sbb-expansion-panel-border-color-open: var(--sbb-color-iron);
-      --sbb-expansion-panel-border-color-closed: var(--sbb-color-midnight);
+      --sbb-expansion-panel-border-color-closed: var(--sbb-color-charcoal);
       --sbb-expansion-panel-header-indicator-color: var(--sbb-color-white);
 
       // File selector
